[package]
name = "pmd_cpack"
version = "1.0.0"
authors = ["marius851000 <mariusdavid@laposte.net>"]
edition = "2018"
description = "A library that can read cpack file, an archive format used in pokemon mystery dungeon games"
repository = "https://github.com/marius851000/pmd_cpack"
keywords = [ "parser" ]
categories = [ "parser-implementations" ]
license = "CC0-1.0"

[dependencies]
io_partition = { path = "../io_partition" }
